@@ -1,3 +1,9 @@
+2004-11-08 [colin]
+
+	* src/pgpinline.c
+		Better memory management for
+		stuff that comes from gpg
+
 2004-11-08 [colin]	0.4
 
 	* src/pgpinline.c
